--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com"
+baseurl = "https://petra66orii.github.io/undercoverunicorn/"
 enableEmoji = true
 footnotereturnlinkcontents = "↩"
 googleAnalytics = ""
