--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ googleAnalytics = ""
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 languageCode = "en-us"
 theme = "hugo-classic"
-title = "Classic"
+title = "Undercover Unicorn"
 
 [markup.goldmark.renderer]
 unsafe = true
