--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://petra66orii.github.io/undercoverunicorn/"
+baseurl = "https://petra66orii.github.io/undercoverunicorn"
 enableEmoji = true
 footnotereturnlinkcontents = "↩"
 languageCode = "en-us"
@@ -40,4 +40,3 @@ url = "/index.xml"
 custom_css = ["css/style.css", "css/fonts.css", "css/theme-override.css"]
 description = "A simple, minimal blog for those who love text."
 footer = "Open-Source | [Github](https://github.com/goodroot/hugo-classic) | [Keybase](https://keybase.io/goodroot)"
-images = ["images/apple-touch-icon.png", "images/favicon-32x32.png", "images/favicon-16x16.png", "images/site.webmanifest", "images/grayf0x.jpg", "images/partywizard.gif"]
