--- a/hugo.toml
+++ b/hugo.toml
@@ -38,5 +38,6 @@ url = "/index.xml"
 
 [params]
 custom_css = ["css/style.css", "css/fonts.css", "css/theme-override.css"]
+staticDir = ["static"]
 description = "A simple, minimal blog for those who love text."
 footer = "Open-Source | [Github](https://github.com/goodroot/hugo-classic) | [Keybase](https://keybase.io/goodroot)"
