--- a/hugo.toml
+++ b/hugo.toml
@@ -38,7 +38,7 @@ name = "Subscribe"
 url = "/index.xml"
 
 [params]
-custom_css = ["css/style.css", "css/fonts.css", "css/theme-override.css"]
-staticDir = ["static"]
+custom_css = ["public/css/style.css", "public/css/fonts.css", "public/css/theme-override.css"]
+staticDir = ["public/images"]
 description = "A simple, minimal blog for those who love text."
 footer = "Open-Source | [Github](https://github.com/goodroot/hugo-classic) | [Keybase](https://keybase.io/goodroot)"
