--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://petra66orii.github.io/undercoverunicorn"
+baseurl = "https://petra66orii.github.io/undercoverunicorn/"
 enableEmoji = true
 theme = "hugo-classic"
 title = "Undercover Unicorn"
