--- a/hugo.toml
+++ b/hugo.toml
@@ -9,11 +9,15 @@ languageCode = "en-us"
 [markup.goldmark.renderer]
 unsafe = true
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.parser]
+      wrapStandAloneImageWithinParagraph = false
+
 [markup.highlight]
 anchorLineNos = false
 codeFences = true
 guessSyntax = false
-hl_Lines = ""
 lineAnchors = ""
 lineNoStart = 1
 lineNos = false
