--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://petra66orii.github.io/undercoverunicorn/"
+baseUrl = "https://petra66orii.github.io/undercoverunicorn/"
 enableEmoji = true
 theme = "hugo-classic"
 title = "Undercover Unicorn"
@@ -34,27 +34,22 @@ post = "/post/:year/:month/:day/:slug/"
 [menu]
 
   [[menu.main]]
-    identifier = "home"
-    name = "Home"
-    url = "/undercoverunicorn/"
-    weight = 1
-  [[menu.main]]
     identifier = "about"
     name = "About"
     url = "/about/"
-    weight = 10
+    weight = 1
   [[menu.main]]
-  name = "Categories"
-  url = "/categories/"
-  weight = 1
+    name = "Categories"
+    url = "/categories/"
+    weight = 2
   [[menu.main]]
-  name = "Tags"
-  url = "/tags/"
-  weight = 2
+    name = "Tags"
+    url = "/tags/"
+    weight = 3
 
 
 [params]
 custom_css = ["css/style.css", "css/fonts.css", "css/theme-override.css"]
 staticDir = ["static"]
 description = "A simple, minimal blog for those who love text."
-footer = "[Github](https://github.com/petra66orii) | [LinkedIn](https://www.linkedin.com/in/petra-bot-a552601a4/)"
+footer = "{Year} - [Github](https://github.com/petra66orii) | [LinkedIn](https://www.linkedin.com/in/petra-bot-a552601a4/)"
